fix bugs & upload documents
fix bugs & upload documents

--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
                     </div>
                 </li>
                 <li>
-                                    </li>
+                    <p><a href="http://www.yuexinchina.com" title="精品生活"><img src="upload/company/company1449441743.gif" width="88" height="31" alt="精品生活" /></a></p>                </li>
             </ul>
         </div>
         <div class="feedback f_right">
