--- a/map.html
+++ b/map.html
@@ -45,7 +45,7 @@
     }
     
     //标注点数组
-    var markerArr = [{title:"广州岳信试验设备有限公司",content:"广州省广州市番禺区新造镇南约商业街34号",point:"113.42554|23.041429",isOpen:1,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
+    var markerArr = [{title:"广州岳信试验设备有限公司",content:"广州市番禺区新造镇新广路37号",point:"113.42554|23.041429",isOpen:1,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
 		 ];
     //创建marker
     function addMarker(){
